Sat Aug 13 17:03:22 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: [ruby-core:38861]

Sat Aug 13 09:39:07 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_*.rb: added tests.

Sat Aug 13 09:36:19 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* ext/date/date_parse.c (parse_ddd_cb): fix r32896. RB_GC_GUARD
	  insertion position was mistaken. [ruby-dev:44337] [Bug #5152]

Sat Aug 13 09:26:24 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/core_ext.rb: Make Kernel#y private.
	  [ruby-core:38913]
	* test/psych/test_yaml.rb: corresponding test.

Sat Aug 13 09:05:16 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c (date_strftime_alloc): followed the change
	  of r32885.
	* doc/NEWS-1.9.3: followed the above change.

Sat Aug 13 08:55:38 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: Only consider strings
	  with fewer than 2 dots to be numbers. [ruby-core:38915]

Sat Aug 13 08:47:20 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: [ruby-core:38855].

Sat Aug 13 03:41:37 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/uri/common.rb:  Fix documentation of URI::Parser.new.  Patch by
	  Steve Klabnik.  [Ruby 1.9 - Bug #5177]

Sat Aug 13 02:19:57 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/digest/digest.c:  Add documentation for the Digest module.  Patch
	  by Sylvain Daubert.  [Ruby 1.9 - Bug #5167]

Sat Aug 13 01:56:11 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rake:  Update to Rake 0.9.2.2.  Prevent pollution of toplevel
	  namespace by Commands.  Remove unused variable and debugging
	  statement in tests.

Fri Aug 12 11:39:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Desbribe "no" configure option for site_ruby
	  and vendor_ruby. Patch by Vit Ondruch. [Bug #5187][ruby-core:38921]

Fri Aug 12 09:00:24 2011  Eric Hodel  <drbrain@segment7.net>
